tests/paczka1/small_fuzzy/20090869.err
Error in line 1: epXp8Tm S315 34,7
Error in line 6: gL5GJrH S315 24,7
Error in line 3: 2AH S179 3,9
Error in line 4: epXp8Tm A739 41,1
Error in line 13: S179 S315 6u,9
